# algorithms_toolbox_coursera

./: .gitignore  36ValidSudoku.py  Binary Tree Right Side View.py  binary_tree_discover_son_identity.py  combinations.py  container_with_most_water.py  decimal_to_binary.py  dfs&bfs.py  is_prime.py  knapsack.py  maximum_binary_tree.py  minimum_size_subarray_sum.py  minimum_window_substring.py  overload.py  percolation.py  pyproject.toml  reverse_linked_list.py  rotate_image.py  snakes_and_ladders.py
concurrency/: check_bytecode.py  data_race.py  deadlock.py  foobar.py  leetcode_1114_printinorder.py  race_condition.py  rlock.py  sempahore.py
google/: add_two_number_linked_list.py  all_possible_paths_2D_R&D.py  bfs_and_dfs.py  decompress_string.py  filessystem.py  ginterview_decompress_string.py  merge_two_linked_lists.py  minimum_paths_sum.py  permutations.py  three_sum.py
oop_tests/math_ops_with_math_ops_as_arguments/: math_ops_with_math_ops_as_arguments_oop.py  math_ops_with_math_ops_as_arguments_pythonic.py
python_stuff/: lambda_ininstance.py
sorting/: insertion_sort.py  merge_sort.py
stack/: easy-brackets-checker.py
tasks/generic_algorithms/: fibonacci.py  fibonacci_modulo.py  gcd.py  last_digit_of_a_large_fibonnaci_number.py  last_digit_of_fibonnaci_number_again.py  last_digit_of_square_fibonnaci_number.py  least_common_multiple.py  utils.py
tasks/greedy_algorithims/: fuel_car.py  (+7 more)
tests/: test_generic_algorithms.py  test_greedy_algorithms.py
twopoints_slidingwindows/: longest Substring_without_repeating_characters.py  substring_concat_of_all_words.py
